# algine-examples

./: .gitignore  CMakeLists.txt  README.md
lib/: README.md
src/: BlendShader.h  BloomSearchShader.h  ColorShader.h  ExampleChessContent.cpp  ExampleChessContent.h  LampMoveThread.cpp  LampMoveThread.h  LoopThread.cpp  LoopThread.h  Main.cpp  ProjectFilesGenerator.cpp  ShaderConfigGenerator.cpp  constants.h  main.cpp
src/resources/models/: colorShader.inputLayoutShapeLocations.json  shadowShader.inputLayoutShapeLocations.json
src/resources/models/astroboy/: astroboy_walk.amtl  astroboy_walk.json  boy.conf.json  norm.conf.json
src/resources/models/chess/: Brown_wood_texture.conf.json  Classic Chess small.amtl  Classic Chess small.json  White_wood_texture.conf.json
src/resources/models/japanese_lamp/: japanese_lamp.shape.json
src/resources/models/man/: README.md  man.amtl  man.blend  man.fbx  man.json  norm.conf.json  tex.conf.json
src/resources/programs/: Blend.conf.json  BloomBlur.hor.conf.json  BloomBlur.ver.conf.json  BloomSearch.conf.json  CocBlur.hor.conf.json  CocBlur.ver.conf.json  Color.conf.json  DirShadow.conf.json  DofBlur.hor.conf.json  DofBlur.ver.conf.json  DofCoc.conf.json  PointShadow.conf.json  SSR.conf.json  Skybox.conf.json
src/resources/shaders/: Blend.frag.glsl  BloomSearch.frag.glsl  DOFCOC.frag.glsl  Material.custom.glsl  Quad.vert.conf.json  SSRFrag.glsl  Shadow.vert.conf.json  blendShader.conf.json  bloomBlurShader.hor.conf.json  bloomBlurShader.vert.conf.json  bloomSearchShader.conf.json  cocBlurShader.hor.conf.json  cocBlurShader.vert.conf.json  colorShader.conf.json  cubeMapShader.conf.json  dirShadowShader.conf.json  dofBlurShader.hor.conf.json  dofBlurShader.vert.conf.json  dofCocShader.conf.json  pointShadowShader.conf.json  ssrShader.conf.json
src/resources/shaders/programs/: Blend.conf.json  BloomBlur.hor.conf.json  BloomBlur.ver.conf.json  BloomSearch.conf.json  CocBlur.ver.conf.json  DirShadow.conf.json  PointShadow.conf.json  Skybox.conf.json
src/resources/textures/: Skybox.conf.json
src/resources/textures/skybox/: Skybox.conf.json
